# ssa

./: .gitignore  pyproject.toml
src/data_wrangling/: data_wrangling.ipynb  extract_fluencybank.py  fluencybank_data_download.py
src/experiments/: README.md  USAGE_EXAMPLES.md  evaluate_asr.py  phi_4_multimodal.py  run_evaluation.py  run_experiment.py  test_metrics.py  test_phi4mm.py
src/experiments/config/: EvaluationConfig.py  base.yaml  chat_example.yaml  config.yaml  conversation_example.yaml  debug_eval.yaml  evaluation_config.py  phi4_config.yaml  phi_4_multimodal_eval.yaml  recording_example.yaml  test_eval.yaml  text_only_example.yaml
src/experiments/datasets/: asr_dataset_base.py  dataset_registry.py  fluencybank_dataset.py
src/experiments/evaluation/: evaluator.py
src/experiments/evaluation_results/: evaluation_results.json  evaluation_samples.csv  evaluation_summary.txt
src/experiments/inference_models/: asr_model_base.py  model_registry.py  phi_4_multimodal_instruct.py  phi_4_with_stutter_prompt.py
src/experiments/notebooks/: playground.ipynb
src/experiments/utils/: analyze_results.py  asr_cache.py  calculate_metrics.py  cha_format_parser.py  configure_logging.py  evaluation_engine.py  evaluation_result.py  evaluation_result_row.py  inference_phi_4_multimodal.py  metrics.py  progress_manager.py  results_analyzer.py  test_evaluator_cache.py  visualize_results.py
src/experiments/utils/datasets/: dataset_registry.py  fluencybank_dataset.py
src/experiments/utils/inference_models/: base_multimodal_asr_model.py  inference_model_registry.py  phi_4_multimodal_instruct.py
src/experiments/utils/models/: example_usage.py  phi_4_multimodal_instruct.py
src/old_experiments/: evaluate_asr.py
src/old_experiments/config/: asr_evaluator_config.py
src/old_experiments/notebooks/: playground.ipynb
src/old_experiments/utils/: evaluation_engine.py  logging_config.py  progress_manager.py
src/old_experiments/utils/datasets/: dataset_registry.py
