[project]
name = "ssa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "backoff>=2.2.1",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "peft>=0.15.2",
    "pillow>=11.2.1",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]
