[project]
name = "ssa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "backoff>=2.2.1",
    "datasets>=3.6.0",
    "huggingface-hub[cli]>=0.33.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "moviepy>=2.1.1",
    "numpy>=2.2.6",
    "peft>=0.15.2",
    "pillow>=11.2.1",
    "polars>=1.28.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.0",
    "soundfile>=0.12.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.66.0",
    "transformers>=4.53.0",
]
